fix the bugs add permissions in jwt and many more